--- a/config.yml
+++ b/config.yml
@@ -2,19 +2,7 @@
 # MEGA INVESTIČNÍ RADAR – CONFIG (CZ)
 # ============================================================
 
-# API klíče (doporučeně přes GitHub Secrets)
 fmp_api_key: ${FMP_API_KEY}
-
-telegram:
-  bot_token: ${TG_BOT_TOKEN}
-  chat_id: ${TG_CHAT_ID}
-
-# Cache/rotace
-cache_ttl_sec: 900
-max_portfolio_snapshots: 200
-
-# Režim rad (SOFT = bez explicitního BUY/SELL, HARD = explicitní BUY/SELL/HOLD)
-advice_mode: SOFT
 
 benchmarks:
   spy: SPY
@@ -26,16 +14,10 @@ weights:
   catalyst: 0.20
   market_regime: 0.20
 
-risk_rules:
-  swing_invalidation_pct: [-2, -4]
-  earnings_wait_hours: 48
-
 # ============================================================
-# TVÉ PORTFOLIO – FINÁLNÍ ČISTÉ VSTUPY (dle tvých screenů + oprav)
+# TVÉ PORTFOLIO – FINÁLNÍ (dle tvých screenů)
 # ============================================================
-
 portfolio:
-  # --- Raiffeisenbank (dle tvých screenů)
   - ticker: NVDA
     qty: 6
     entry: 186.51
@@ -47,7 +29,6 @@ portfolio:
     entry: 328.75
     currency: USD
     broker: Raiffeisen
-    note: "Taiwan Semiconductor - ADR"
 
   - ticker: MSFT
     qty: 3
@@ -66,22 +47,18 @@ portfolio:
     entry: 802
     currency: CZK
     broker: Raiffeisen
-    note: "CSG B.V."
 
   - ticker: SGLD
     qty: 11
     entry: 74.61
     currency: EUR
     broker: Raiffeisen
-    note: "iShares Physical Gold EUR Hedged ETC (placeholder ticker)"
 
-  # --- XTB (USD část) – dle tvých oprav:
   - ticker: NVO
     qty: 5.9678
     entry: 0
     currency: USD
     broker: XTB
-    note: "Agregace: 4.143 @ 58.16 a 1.8248 @ 54.76"
 
   - ticker: NBIS
     qty: 3
@@ -101,10 +78,6 @@ portfolio:
     currency: USD
     broker: XTB
 
-# ============================================================
-# WATCHLIST + NOVÉ NADĚJNÉ
-# ============================================================
-
 watchlist:
   - SPY
   - QQQ
@@ -116,3 +89,12 @@ new_candidates:
   - AVGO
   - CRWD
   - LLT
+
+# ============================================================
+# KRITICKÉ: mapování tickerů na Yahoo symboly (kvůli „no data“)
+# Sem napiš až zjistíš správné tickery:
+# ============================================================
+ticker_map:
+  # CSG: "CSG.PR"     # příklad (NENÍ garantované)
+  # SGLD: "SGLD.L"    # příklad (NENÍ garantované)
+  # LLT:  "..."       # pokud Yahoo ten ticker nezná
