--- a/.github/workflows/xtb-bot.yml
+++ b/.github/workflows/xtb-bot.yml
@@ -5,9 +5,14 @@ on:
     - cron: "*/15 * * * *"
   workflow_dispatch:
 
+concurrency:
+  group: xtb-bot
+  cancel-in-progress: true
+
 jobs:
   run:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
       - name: Checkout
@@ -18,13 +23,12 @@ jobs:
         with:
           python-version: "3.11"
 
+      # ✅ Stabilní cache pro .state (spolehlivé ukládání stavu)
       - name: Restore state cache
         uses: actions/cache@v4
         with:
           path: .state
-          key: xtb-state-${{ github.run_id }}
-          restore-keys: |
-            xtb-state-
+          key: xtb-state
 
       - name: Install deps
         run: |
@@ -48,6 +52,7 @@ jobs:
           NEWS_PER_TICKER: "2"
           TOP_N: "5"
 
+          # Email proměnné tu klidně nech (jen když je ahoj.py používá)
           EMAIL_ENABLED: "true"
           EMAIL_SENDER: ${{ secrets.EMAIL_SENDER }}
           EMAIL_RECEIVER: ${{ secrets.EMAIL_RECEIVER }}
