--- a/config.yml
+++ b/config.yml
@@ -2,12 +2,32 @@
 # MEGA INVESTIČNÍ RADAR – CONFIG (CZ)
 # ============================================================
 
-# FMP klíč necháme prázdný -> bere se z GitHub Secrets (ENV)
-fmp_api_key: ""
+fmp_api_key: ${FMP_API_KEY}
 
+timezone: Europe/Prague
+
+# ------------------------------------------------------------
+# ČASOVÁ LOGIKA
+# ------------------------------------------------------------
+premarket_time: "12:00"
+evening_time: "20:00"
+
+alert_start: "12:00"
+alert_end: "21:00"
+alert_threshold_pct: 3
+
+news_per_ticker: 2
+top_n: 5
+
+# ------------------------------------------------------------
+# BENCHMARK
+# ------------------------------------------------------------
 benchmarks:
   spy: SPY
 
+# ------------------------------------------------------------
+# VÁHY SCORE MODELU
+# ------------------------------------------------------------
 weights:
   momentum: 0.25
   rel_strength: 0.20
@@ -15,9 +35,9 @@ weights:
   catalyst: 0.20
   market_regime: 0.20
 
-# ============================================================
-# TVÉ PORTFOLIO – FINÁLNÍ (dle tvých screenů)
-# ============================================================
+# ------------------------------------------------------------
+# PORTFOLIO
+# ------------------------------------------------------------
 portfolio:
   - ticker: NVDA
     qty: 6
@@ -79,11 +99,17 @@ portfolio:
     currency: USD
     broker: XTB
 
+# ------------------------------------------------------------
+# WATCHLIST
+# ------------------------------------------------------------
 watchlist:
   - SPY
   - QQQ
   - SMH
 
+# ------------------------------------------------------------
+# NOVÉ NADĚJNÉ
+# ------------------------------------------------------------
 new_candidates:
   - ASML
   - AMD
@@ -91,10 +117,20 @@ new_candidates:
   - CRWD
   - LLT
 
-# ============================================================
-# KRITICKÉ: mapování tickerů na Yahoo symboly (kvůli „no data“)
-# ============================================================
+# ------------------------------------------------------------
+# KRITICKÉ: MAPOVÁNÍ TICKERŮ (řeší Yahoo chyby)
+# ------------------------------------------------------------
 ticker_map:
-  LLT: "LHX"
-  # CSG: "DOPLN_Z_YAHOO"
-  # SGLD: "DOPLN_Z_YAHOO"
+
+  # Evropské instrumenty / burzy
+  CSG: "CSG.NL"
+  SGLD: "SGLD.L"
+
+  # ADR / speciální případy (ponechány explicitně)
+  TSM: "TSM"
+  NVO: "NVO"
+
+  # ETF / indexy (většinou OK, ale explicitní = stabilní)
+  SPY: "SPY"
+  QQQ: "QQQ"
+  SMH: "SMH"
