--- a/config.yml
+++ b/config.yml
@@ -1,14 +1,7 @@
-# ============================================================
-# MEGA INVESTIČNÍ RADAR – CONFIG (CZ)
-# ============================================================
-
+# config.yml
 fmp_api_key: ${FMP_API_KEY}
-
 timezone: Europe/Prague
 
-# ------------------------------------------------------------
-# ČASOVÁ LOGIKA
-# ------------------------------------------------------------
 premarket_time: "12:00"
 evening_time: "20:00"
 
@@ -18,16 +11,12 @@ alert_threshold_pct: 3
 
 news_per_ticker: 2
 top_n: 5
+earnings_days_ahead: 7
 
-# ------------------------------------------------------------
-# BENCHMARK
-# ------------------------------------------------------------
 benchmarks:
   spy: SPY
+  vix: "^VIX"
 
-# ------------------------------------------------------------
-# VÁHY SCORE MODELU
-# ------------------------------------------------------------
 weights:
   momentum: 0.25
   rel_strength: 0.20
@@ -35,81 +24,63 @@ weights:
   catalyst: 0.20
   market_regime: 0.20
 
-# ------------------------------------------------------------
-# PORTFOLIO
-# ------------------------------------------------------------
 portfolio:
   - ticker: NVDA
     qty: 6
     entry: 186.51
     currency: USD
     broker: Raiffeisen
-
   - ticker: TSM
     qty: 4
     entry: 328.75
     currency: USD
     broker: Raiffeisen
-
   - ticker: MSFT
     qty: 3
     entry: 412.60
     currency: EUR
     broker: Raiffeisen
-
   - ticker: CVX
     qty: 5
     entry: 145.68
     currency: EUR
     broker: Raiffeisen
-
   - ticker: CSG
     qty: 33
     entry: 802
     currency: CZK
     broker: Raiffeisen
-
   - ticker: SGLD
     qty: 11
     entry: 74.61
     currency: EUR
     broker: Raiffeisen
-
   - ticker: NVO
     qty: 5.9678
     entry: 0
     currency: USD
     broker: XTB
-
   - ticker: NBIS
     qty: 3
     entry: 82.24
     currency: USD
     broker: XTB
-
   - ticker: IREN
     qty: 2
     entry: 40.30
     currency: USD
     broker: XTB
-
   - ticker: LEU
     qty: 0.2546
     entry: 235.55
     currency: USD
     broker: XTB
 
-# ------------------------------------------------------------
-# WATCHLIST
-# ------------------------------------------------------------
 watchlist:
   - SPY
   - QQQ
   - SMH
 
-# ------------------------------------------------------------
-# NOVÉ NADĚJNÉ
-# ------------------------------------------------------------
 new_candidates:
   - ASML
   - AMD
@@ -117,20 +88,11 @@ new_candidates:
   - CRWD
   - LLT
 
-# ------------------------------------------------------------
-# KRITICKÉ: MAPOVÁNÍ TICKERŮ (řeší Yahoo chyby)
-# ------------------------------------------------------------
 ticker_map:
-
-  # Evropské instrumenty / burzy
   CSG: "CSG.NL"
   SGLD: "SGLD.L"
-
-  # ADR / speciální případy (ponechány explicitně)
   TSM: "TSM"
   NVO: "NVO"
-
-  # ETF / indexy (většinou OK, ale explicitní = stabilní)
   SPY: "SPY"
   QQQ: "QQQ"
   SMH: "SMH"
