--- a/.github/workflows/earnings-weekly.yml
+++ b/.github/workflows/earnings-weekly.yml
@@ -1,41 +1,51 @@
-# earnings_weekly.py
-from __future__ import annotations
+name: weekly-earnings
 
-from datetime import datetime, timedelta
-from zoneinfo import ZoneInfo
+on:
+  schedule:
+    - cron: "0 6 * * 1"   # 08:00 Praha v létě (CEST)
+    - cron: "0 7 * * 1"   # 08:00 Praha v zimě (CET)
+  workflow_dispatch:
 
-from radar.config import load_config
-from radar.state import State
-from radar.engine import fetch_earnings_calendar
-from reporting.telegram import telegram_send_long
-from reporting.formatters import format_earnings_weekly
+jobs:
+  run:
+    runs-on: ubuntu-latest
 
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-def main() -> None:
-    cfg = load_config()
-    st = State(cfg.state_dir)
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
 
-    now = datetime.now(ZoneInfo(cfg.timezone))
-    today = now.strftime("%Y-%m-%d")
+      - name: Restore state cache
+        uses: actions/cache@v4
+        with:
+          path: .state
+          key: xtb-state-${{ github.run_id }}
+          restore-keys: |
+            xtb-state-
 
-    # Dedupe: pošli jen 1× za pondělí
-    tag = "earnings_weekly"
-    if st.already_sent(tag, today):
-        print("ℹ️ earnings_weekly už dnes odesláno.")
-        return
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    days = int(getattr(cfg, "earnings_days_ahead", 7) or 7)
-    start = now.date()
-    end = (now + timedelta(days=days)).date()
+      - name: Run weekly earnings
+        env:
+          TIMEZONE: Europe/Prague
+          RUN_MODE: run
+          WEEKLY_EARNINGS_TIME: "08:00"
 
-    items = fetch_earnings_calendar(cfg, start.isoformat(), end.isoformat())
-    msg = format_earnings_weekly(items, cfg, now, days=days)
+          TELEGRAMTOKEN: ${{ secrets.TELEGRAMTOKEN }}
+          CHATID: ${{ secrets.CHATID }}
+          FMPAPIKEY: ${{ secrets.FMPAPIKEY }}
 
-    telegram_send_long(cfg, msg)
-    st.mark_sent(tag, today)
-    st.save()
-    print("✅ Earnings weekly sent.")
+          EMAIL_ENABLED: "true"
+          EMAIL_SENDER: ${{ secrets.EMAIL_SENDER }}
+          EMAIL_RECEIVER: ${{ secrets.EMAIL_RECEIVER }}
+          GMAILPASSWORD: ${{ secrets.GMAILPASSWORD }}
 
-
-if __name__ == "__main__":
-    main()
+        run: |
+          python ahoj.py
