--- a/.github/workflows/radar-agent-alerts.yml
+++ b/.github/workflows/radar-agent-alerts.yml
@@ -1,12 +1,12 @@
-name: radar-alerts
+name: radar-earnings
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: "*/15 11-20 * * 1-5"  # Po–Pá každých 15 min 11:00–20:59 UTC
+    - cron: "0 7 * * 1"  # Pondělí 07:00 UTC (08:00 Prague)
 
 concurrency:
-  group: radar-alerts
+  group: radar-earnings
   cancel-in-progress: true
 
 permissions:
@@ -40,11 +40,11 @@ jobs:
           restore-keys: |
             radar-state-${{ github.ref_name }}-
 
-      - name: Run alerts
+      - name: Run earnings
         env:
           FMP_API_KEY: ${{ secrets.FMP_API_KEY }}
         run: |
-          python run_agent.py alerts
+          python run_agent.py earnings
 
       - name: Save state cache
         uses: actions/cache@v4
