--- a/.github/workflows/xtb-bot.yml
+++ b/.github/workflows/xtb-bot.yml
@@ -1,13 +1,18 @@
-name: run-bot
+name: xtb-bot
 
 on:
   schedule:
-    - cron: "*/15 * * * *"
+    - cron: "*/10 * * * *"   # každých 10 minut
   workflow_dispatch:
+
+concurrency:
+  group: xtb-bot
+  cancel-in-progress: true
 
 jobs:
   run:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
 
     steps:
       - name: Checkout
@@ -18,39 +23,23 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
+
       - name: Restore state cache
         uses: actions/cache@v4
         with:
           path: .state
-          key: xtb-state-${{ github.run_id }}
-          restore-keys: |
-            xtb-state-
-
-      - name: Install deps
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          key: xtb-state
 
       - name: Run bot
         env:
-          TIMEZONE: Europe/Prague
-          RUN_MODE: run
-
           TELEGRAMTOKEN: ${{ secrets.TELEGRAMTOKEN }}
           CHATID: ${{ secrets.CHATID }}
-          FMPAPIKEY: ${{ secrets.FMPAPIKEY }}
-
-          PREMARKET_TIME: "07:30"
-          EVENING_TIME: "20:00"
-
-          ALERT_START: "12:00"
-          ALERT_END: "21:00"
-          ALERT_THRESHOLD: "3"
-
-          EMAIL_ENABLED: "true"
           EMAIL_SENDER: ${{ secrets.EMAIL_SENDER }}
           EMAIL_RECEIVER: ${{ secrets.EMAIL_RECEIVER }}
           GMAILPASSWORD: ${{ secrets.GMAILPASSWORD }}
-
+          EMAIL_ENABLED: ${{ secrets.EMAIL_ENABLED }}
         run: |
-          python ahoj.py
+          python run_agent.py poll
