--- a/.github/workflows/earnings-weekly.yml
+++ b/.github/workflows/earnings-weekly.yml
@@ -2,8 +2,9 @@ name: weekly-earnings
 
 on:
   schedule:
-    - cron: "0 6 * * 1"   # 08:00 Praha v létě (CEST)
-    - cron: "0 7 * * 1"   # 08:00 Praha v zimě (CET)
+    # Pondělí 08:00 Praha (dvě cron kvůli CET/CEST)
+    - cron: "0 6 * * 1"
+    - cron: "0 7 * * 1"
   workflow_dispatch:
 
 jobs:
@@ -18,14 +19,15 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+          cache: "pip"
 
       - name: Restore state cache
         uses: actions/cache@v4
         with:
           path: .state
-          key: xtb-state-${{ github.run_id }}
+          key: xtb-state-${{ github.ref_name }}-${{ github.run_number }}
           restore-keys: |
-            xtb-state-
+            xtb-state-${{ github.ref_name }}-
 
       - name: Install deps
         run: |
@@ -35,8 +37,6 @@ jobs:
       - name: Run weekly earnings
         env:
           TIMEZONE: Europe/Prague
-          RUN_MODE: run
-          WEEKLY_EARNINGS_TIME: "08:00"
 
           TELEGRAMTOKEN: ${{ secrets.TELEGRAMTOKEN }}
           CHATID: ${{ secrets.CHATID }}
@@ -46,6 +46,11 @@ jobs:
           EMAIL_SENDER: ${{ secrets.EMAIL_SENDER }}
           EMAIL_RECEIVER: ${{ secrets.EMAIL_RECEIVER }}
           GMAILPASSWORD: ${{ secrets.GMAILPASSWORD }}
-
         run: |
-          python ahoj.py
+          python run_agent.py earnings
+
+      - name: Save state cache
+        uses: actions/cache@v4
+        with:
+          path: .state
+          key: xtb-state-${{ github.ref_name }}-${{ github.run_number }}
