--- a/.github/workflows/radar-agent-snapshot.yml
+++ b/.github/workflows/radar-agent-snapshot.yml
@@ -1,20 +1,16 @@
-name: radar-snapshot
+name: radar-agent-snapshot
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: "30 6 * * 1-5"   # Po–Pá 06:30 UTC (07:30 Prague)
-    - cron: "0 19 * * 1-5"   # Po–Pá 19:00 UTC (20:00 Prague)
+    - cron: "*/10 * * * *"
+  workflow_dispatch:
 
 concurrency:
   group: radar-snapshot
   cancel-in-progress: true
 
-permissions:
-  contents: read
-
 jobs:
-  run:
+  snapshot:
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
@@ -26,29 +22,30 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-          cache: "pip"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; else pip install yfinance feedparser requests PyYAML; fi
+          pip install -r requirements.txt
 
       - name: Restore state cache
         uses: actions/cache@v4
         with:
           path: .state
-          key: radar-state-${{ github.ref_name }}-${{ github.run_number }}
-          restore-keys: |
-            radar-state-${{ github.ref_name }}-
+          key: xtb-state
 
       - name: Run snapshot
+        run: python run_agent.py snapshot
         env:
-          FMP_API_KEY: ${{ secrets.FMP_API_KEY }}
-        run: |
-          python run_agent.py snapshot
+          TIMEZONE: Europe/Prague
 
-      - name: Save state cache
-        uses: actions/cache@v4
-        with:
-          path: .state
-          key: radar-state-${{ github.ref_name }}-${{ github.run_number }}
+          FMPAPIKEY: ${{ secrets.FMPAPIKEY }}
+          FMP_API_KEY: ${{ secrets.FMPAPIKEY }}
+
+          TELEGRAMTOKEN: ${{ secrets.TELEGRAMTOKEN }}
+          CHATID: ${{ secrets.CHATID }}
+
+          EMAIL_ENABLED: "true"
+          EMAIL_SENDER: ${{ secrets.EMAIL_SENDER }}
+          EMAIL_RECEIVER: ${{ secrets.EMAIL_RECEIVER }}
+          GMAILPASSWORD: ${{ secrets.GMAILPASSWORD }}
