--- a/.github/workflows/xtb-weekly-learn.yml
+++ b/.github/workflows/xtb-weekly-learn.yml
@@ -2,14 +2,18 @@ name: xtb-weekly-learn
 
 on:
   schedule:
-    # Neděle 17:00 & 18:00 Praha (dvě cron kvůli CET/CEST)
-    - cron: "0 16 * * 0"
-    - cron: "0 17 * * 0"
+    - cron: "0 7 * * 1"
   workflow_dispatch:
+
+concurrency:
+  group: xtb-weekly-learn
+  cancel-in-progress: true
 
 jobs:
   learn:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -18,33 +22,30 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-          cache: "pip"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Restore state cache
         uses: actions/cache@v4
         with:
           path: .state
-          key: xtb-state-${{ github.ref_name }}-${{ github.run_number }}
-          restore-keys: |
-            xtb-state-${{ github.ref_name }}-
+          key: xtb-state
 
-      - name: Install deps
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Run weekly learn (weights)
+      - name: Run learn
+        run: python run_agent.py learn
         env:
           TIMEZONE: Europe/Prague
-          FMPAPIKEY: ${{ secrets.FMPAPIKEY }}
-          # Backfill range reserved for future use (backfill is placeholder in run_agent.py)
-          BACKFILL_START: "2025-01-01"
-          BACKFILL_END: ""
-        run: |
-          python run_agent.py learn
 
-      - name: Save state cache
-        uses: actions/cache@v4
-        with:
-          path: .state
-          key: xtb-state-${{ github.ref_name }}-${{ github.run_number }}
+          FMPAPIKEY: ${{ secrets.FMPAPIKEY }}
+          FMP_API_KEY: ${{ secrets.FMPAPIKEY }}
+
+          TELEGRAMTOKEN: ${{ secrets.TELEGRAMTOKEN }}
+          CHATID: ${{ secrets.CHATID }}
+
+          EMAIL_ENABLED: "true"
+          EMAIL_SENDER: ${{ secrets.EMAIL_SENDER }}
+          EMAIL_RECEIVER: ${{ secrets.EMAIL_RECEIVER }}
+          GMAILPASSWORD: ${{ secrets.GMAILPASSWORD }}
