--- a/.github/workflows/xtb-weekly-learn.yml
+++ b/.github/workflows/xtb-weekly-learn.yml
@@ -1,16 +1,16 @@
-name: xtb-weekly-learn
+name: earnings-weekly
 
 on:
   schedule:
-    - cron: "0 7 * * 1"
+    - cron: "0 8 * * 1"
   workflow_dispatch:
 
 concurrency:
-  group: xtb-weekly-learn
+  group: earnings-weekly
   cancel-in-progress: true
 
 jobs:
-  learn:
+  earnings:
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
@@ -34,8 +34,8 @@ jobs:
           path: .state
           key: xtb-state
 
-      - name: Run learn
-        run: python run_agent.py learn
+      - name: Run earnings
+        run: python run_agent.py earnings
         env:
           TIMEZONE: Europe/Prague
 
