--- a/.github/workflows/xtb-backfill.yml
+++ b/.github/workflows/xtb-backfill.yml
@@ -4,17 +4,23 @@ on:
   workflow_dispatch:
     inputs:
       start:
-        description: "Start (YYYY-MM-DD)"
+        description: "BACKFILL_START (YYYY-MM-DD)"
         required: true
         default: "2025-01-01"
       end:
-        description: "End (YYYY-MM-DD, prázdné = dnes)"
+        description: "BACKFILL_END (YYYY-MM-DD, optional)"
         required: false
         default: ""
+
+concurrency:
+  group: xtb-backfill
+  cancel-in-progress: true
 
 jobs:
   backfill:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -23,32 +29,32 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-          cache: "pip"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Restore state cache
         uses: actions/cache@v4
         with:
           path: .state
-          key: xtb-state-${{ github.ref_name }}-${{ github.run_number }}
-          restore-keys: |
-            xtb-state-${{ github.ref_name }}-
+          key: xtb-state
 
-      - name: Install deps
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Run backfill (placeholder)
+      - name: Run backfill
+        run: python run_agent.py backfill
         env:
           TIMEZONE: Europe/Prague
-          FMPAPIKEY: ${{ secrets.FMPAPIKEY }}
-          BACKFILL_START: ${{ inputs.start }}
-          BACKFILL_END: ${{ inputs.end }}
-        run: |
-          python run_agent.py backfill
+          BACKFILL_START: ${{ github.event.inputs.start }}
+          BACKFILL_END: ${{ github.event.inputs.end }}
 
-      - name: Save state cache
-        uses: actions/cache@v4
-        with:
-          path: .state
-          key: xtb-state-${{ github.ref_name }}-${{ github.run_number }}
+          FMPAPIKEY: ${{ secrets.FMPAPIKEY }}
+          FMP_API_KEY: ${{ secrets.FMPAPIKEY }}
+
+          TELEGRAMTOKEN: ${{ secrets.TELEGRAMTOKEN }}
+          CHATID: ${{ secrets.CHATID }}
+
+          EMAIL_ENABLED: "true"
+          EMAIL_SENDER: ${{ secrets.EMAIL_SENDER }}
+          EMAIL_RECEIVER: ${{ secrets.EMAIL_RECEIVER }}
+          GMAILPASSWORD: ${{ secrets.GMAILPASSWORD }}
