--- a/.github/workflows/xtb-bot.yml
+++ b/.github/workflows/xtb-bot.yml
@@ -1,8 +1,6 @@
 name: xtb-bot
 
 on:
-  schedule:
-    - cron: "*/10 * * * *"   # každých 10 minut
   workflow_dispatch:
 
 concurrency:
@@ -10,9 +8,9 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  run:
+  bot:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 10
 
     steps:
       - name: Checkout
@@ -25,6 +23,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Restore state cache
@@ -33,13 +32,18 @@ jobs:
           path: .state
           key: xtb-state
 
-      - name: Run bot
+      - name: Send menu
+        run: python run_agent.py menu
         env:
+          TIMEZONE: Europe/Prague
+
+          FMPAPIKEY: ${{ secrets.FMPAPIKEY }}
+          FMP_API_KEY: ${{ secrets.FMPAPIKEY }}
+
           TELEGRAMTOKEN: ${{ secrets.TELEGRAMTOKEN }}
           CHATID: ${{ secrets.CHATID }}
+
+          EMAIL_ENABLED: "true"
           EMAIL_SENDER: ${{ secrets.EMAIL_SENDER }}
           EMAIL_RECEIVER: ${{ secrets.EMAIL_RECEIVER }}
           GMAILPASSWORD: ${{ secrets.GMAILPASSWORD }}
-          EMAIL_ENABLED: ${{ secrets.EMAIL_ENABLED }}
-        run: |
-          python run_agent.py poll
