--- a/.github/workflows/earnings-weekly.yml
+++ b/.github/workflows/earnings-weekly.yml
@@ -1,15 +1,18 @@
-name: weekly-earnings
+name: earnings-weekly
 
 on:
   schedule:
-    # Pondělí 08:00 Praha (dvě cron kvůli CET/CEST)
-    - cron: "0 6 * * 1"
-    - cron: "0 7 * * 1"
+    - cron: "5 8 * * 1"
   workflow_dispatch:
 
+concurrency:
+  group: xtb-radar
+  cancel-in-progress: true
+
 jobs:
-  run:
+  earnings:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
       - name: Checkout
@@ -19,38 +22,30 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-          cache: "pip"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Restore state cache
         uses: actions/cache@v4
         with:
           path: .state
-          key: xtb-state-${{ github.ref_name }}-${{ github.run_number }}
-          restore-keys: |
-            xtb-state-${{ github.ref_name }}-
+          key: xtb-state
 
-      - name: Install deps
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Run weekly earnings
+      - name: Run earnings
+        run: python run_agent.py earnings
         env:
           TIMEZONE: Europe/Prague
 
+          FMPAPIKEY: ${{ secrets.FMPAPIKEY }}
+          FMP_API_KEY: ${{ secrets.FMPAPIKEY }}
+
           TELEGRAMTOKEN: ${{ secrets.TELEGRAMTOKEN }}
           CHATID: ${{ secrets.CHATID }}
-          FMPAPIKEY: ${{ secrets.FMPAPIKEY }}
 
           EMAIL_ENABLED: "true"
           EMAIL_SENDER: ${{ secrets.EMAIL_SENDER }}
           EMAIL_RECEIVER: ${{ secrets.EMAIL_RECEIVER }}
           GMAILPASSWORD: ${{ secrets.GMAILPASSWORD }}
-        run: |
-          python run_agent.py earnings
-
-      - name: Save state cache
-        uses: actions/cache@v4
-        with:
-          path: .state
-          key: xtb-state-${{ github.ref_name }}-${{ github.run_number }}
